updated new addessment

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <img src="bg1.png">
     </div>
      <div class="login-container">
-       <form id="login1">
+       <form  style="height:400px" id="login1">
            <h2>We are <span style="color: grey;">NUVA</span></h2>
          <p>Welcome back! Log in to your</p>
          <p> account to view today's</p>
@@ -39,7 +39,7 @@
             </div>
           </div> 
           <button type="submit" class="btn" >Login</button>   
-          <a href="signup.html"> Not Registered?</a>
+          <a href="signup.html"> Not Registerd Yet </a>
         </form>   
      </div>
 
